--- a/project2/app/templates/app/account.html
+++ b/project2/app/templates/app/account.html
@@ -1,7 +1,29 @@
 {% extends "app/layout.html" %}
-
+{% load staticfiles %}
 {% block content %}
 
-<h1>Teste</h1>
+<div class="container-fluid" style="margin-top: 30px">
+    <div class="row" style="margin-top: 30px">
+        <div class="col-sm-3 col-md-6 col-lg-4">
+            <div class="card" style="width: 20rem;">
+                <img class="card-img-top" src={{ photo }} alt="Card image cap">
+                <div class="card-block">
+                    </br>
+                    <center><h5 class="card-title align-content-between">{{ username }}</h5></center>
+                    <p class="card-text">
+                    <ul style="list-style-type: none;">
+                        <li>Followers: {{ followers }}</li>
+                        <li>Username: {{ id }}</li>
+                    </ul>
+                    </p>
+                    <a href={{ external_urls }} class="btn btn-toolbar" target="_blank">My spotify page</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-9 col-md-6 col-lg-8" style="background-color:pink;">
+        </div>
+    </div>
+</div>
+
 
 {% endblock %}
