--- a/project2/app/templates/app/artistBio.html
+++ b/project2/app/templates/app/artistBio.html
@@ -3,10 +3,10 @@
 
 {% block content %}
 
-    <div class="jumbotron jumbotron-fluid" style=" background-image: url({% static 'app/images/nophoto.gif' %});">
+    <div class="jumbotron jumbotron-fluid" style=" background-image: url({{image}});">
       <div class="container">
-        <h1 class="display-4">Artist Name</h1>
-          <p>Some Info about him</p>
+        <h1 class="display-4">{{ name }}</h1>
+          <p>{{ followers }} followers</p>
       </div>
     </div>
     <div class="container">
