--- a/project2/app/templates/app/index.html
+++ b/project2/app/templates/app/index.html
@@ -30,10 +30,8 @@
                              src="{{ image }}" alt="Card image">
                         <div class="card-body">
                             <h6 class="card-title">{{ name }}</h6>
-                            {% for artist,trackname in artists %}
-                                {% if trackname == name %}
-                                    <a href="#" class="card-text badge badge-pill badge-secondary ">{{ artist }}</a>
-                                {% endif %}
+                            {% for artist,trackname,id in artists %}
+                                    <a href="/artist/id={{id}}/" class="card-text badge badge-pill badge-secondary ">{{ artist }}</a>
                             {% endfor %}
                         </div>
                     </div>
