--- a/project2/app/templates/app/index.html
+++ b/project2/app/templates/app/index.html
@@ -7,36 +7,34 @@
         <h1>New Albums and Singles</h1>
         <div class="row">
             {% for name,image in new_releases %}
-                <div class="col-sm-3">
-                    <div class="card">
-                        <img data-toggle="modal" data-target=".bd-example-modal-sm" class="card-img-top"
-                             src="{{ image }}" alt="Card image">
-                        <div class="card-body">
-                            <h6 class="card-title"> {{ name }} </h6>
-                            <a href="#" class="card-text badge badge-pill badge-secondary ">Songs</a>
-                        </div>
+            <div class="col-sm-3">
+                <div class="card">
+                    <img data-toggle="modal" data-target=".bd-example-modal-sm" class="card-img-top"
+                         src="{{ image }}" alt="Card image">
+                    <div class="card-body">
+                        <h6 class="card-title"> {{ name }} </h6>
+                        <a href="#" class="card-text badge badge-pill badge-secondary ">Songs</a>
                     </div>
                 </div>
+            </div>
             {% endfor %}
         </div>
     </div>
     <div style="padding-top: 30px">
         <h1>Top Tracks</h1>
         <div class="row">
-        {% for name, image in top_tracks %}
-                <div class="col-sm-3">
-                    <div class="card">
-                        <img data-toggle="modal" data-target=".bd-example-modal-sm" class="card-img-top"
-                             src="{{ image }}" alt="Card image">
-                        <div class="card-body">
-                            <h6 class="card-title">{{ name }}</h6>
-                            {% for artist,trackname,id in artists %}
-                                    <a href="/artist/id={{id}}/" class="card-text badge badge-pill badge-secondary ">{{ artist }}</a>
-                            {% endfor %}
-                        </div>
+            {% for top_track in top_tracks %}
+            <div class="col-sm-3">
+                <div class="card">
+                    <img data-toggle="modal" data-target=".bd-example-modal-sm" class="card-img-top"
+                         src="{{ top_track.src.value }}" alt="Card image">
+                    <div class="card-body">
+                        <h6 class="card-title">{{ top_track.name.value }}</h6>
+                        <a href="/artist/id={{ top_track.src.value }}/" class="card-text badge badge-pill badge-secondary ">{{ top_track.artists.value }}</a>
                     </div>
                 </div>
-        {% endfor %}
+            </div>
+            {% endfor %}
         </div>
     </div>
 </div>
